XWIKI-17627: Livedata Add entry from layout
* Improve text field detection in page object